--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -66,6 +66,7 @@ autoResConfig {
     generatedClassFullName = "rikka.shizuku.manager.ShizukuLocales"
     generateRes = false
     generatedArrayFirstItem = "SYSTEM"
+    generateLocaleConfig = true
 }
 
 materialThemeBuilder {
