--- a/starter/build.gradle
+++ b/starter/build.gradle
@@ -1,6 +1,5 @@
 plugins {
     id 'com.android.library'
-    id 'kotlin-android'
 }
 
 android {
@@ -23,6 +22,7 @@ dependencies {
     implementation project(':shared')
     implementation project(':server-shared')
     compileOnly project(':provider')
+    implementation 'androidx.annotation:annotation:1.3.0'
     implementation 'dev.rikka.hidden:compat:3.0.0'
     compileOnly 'dev.rikka.hidden:stub:3.0.0'
     implementation("dev.rikka.tools.refine:runtime:3.1.1")
