Fix crash in release

--- a/manager/aapt2-resources.cfg
+++ b/manager/aapt2-resources.cfg
@@ -6,6 +6,7 @@ color/material_cyan_50#no_obfuscate
 color/material_blue_50#no_obfuscate
 color/material_blue_grey_50#no_obfuscate
 color/material_deep_purple_50#no_obfuscate
+color/material_red_50#no_obfuscate
 
 color/material_orange_100#no_obfuscate
 color/material_indigo_100#no_obfuscate
@@ -15,6 +16,7 @@ color/material_cyan_100#no_obfuscate
 color/material_blue_100#no_obfuscate
 color/material_blue_grey_100#no_obfuscate
 color/material_deep_purple_100#no_obfuscate
+color/material_red_100#no_obfuscate
 
 color/material_orange_600#no_obfuscate
 color/material_indigo_600#no_obfuscate
@@ -24,3 +26,4 @@ color/material_cyan_600#no_obfuscate
 color/material_blue_600#no_obfuscate
 color/material_blue_grey_600#no_obfuscate
 color/material_deep_purple_600#no_obfuscate
+color/material_red_600#no_obfuscate
