--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -89,14 +89,13 @@ materialThemeBuilder {
     generateTextColors = true
 }
 
-def optimizeReleaseResources = task('optimizeReleaseResources').doLast {
+def collapseReleaseResourceNames = task('collapseReleaseResourceNames').doLast {
     def aapt2 = Paths.get(project.android.sdkDirectory.path, 'build-tools', project.android.buildToolsVersion, 'aapt2')
     def zip = Paths.get(project.buildDir.path, 'intermediates',
-            'processed_res', 'release', 'out', "resources-release.ap_")
+            'optimized_processed_res', 'release', 'resources-release-optimize.ap_')
     def optimized = new File("${zip}.opt")
     def cmd = exec {
         commandLine aapt2, 'optimize', '--collapse-resource-names',
-                '--shorten-resource-paths',
                 '--resources-config-path', 'aapt2-resources.cfg',
                 '-o', optimized, zip
         ignoreExitValue false
@@ -108,7 +107,7 @@ def optimizeReleaseResources = task('optimizeReleaseResources').doLast {
 }
 
 afterEvaluate {
-    tasks.getByName('processReleaseResources').finalizedBy(optimizeReleaseResources)
+    tasks.getByName('optimizeReleaseResources').finalizedBy(collapseReleaseResourceNames)
     tasks.getByName('preReleaseBuild').dependsOn(':shell:assembleRelease')
     tasks.getByName('preDebugBuild').dependsOn(':shell:assembleDebug')
 }
