--- a/build.gradle
+++ b/build.gradle
@@ -1,53 +1,32 @@
+buildscript {
+    apply from: 'api/manifest.gradle'
+    ext.kotlinVersion = '1.8.0'
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath 'com.vanniktech:gradle-maven-publish-plugin:0.20.0'
+    }
+}
+
+plugins {
+    id 'com.android.application' version '7.4.2' apply false
+    id 'com.android.library' version '7.4.2' apply false
+    id 'org.jetbrains.kotlin.jvm' version '1.8.0' apply false
+    id 'dev.rikka.tools.autoresconfig' version '1.2.1' apply false
+    id 'dev.rikka.tools.materialthemebuilder' version '1.3.3' apply false
+    alias libs.plugins.refine apply false
+}
+
 apply plugin: 'idea'
 
 idea.module {
     excludeDirs += file('out')
 }
 
-buildscript {
-    apply from: 'api/manifest.gradle'
-
-    ext.kotlinVersion = '1.7.20'
-    repositories {
-        mavenCentral()
-        google()
-
-        // In case newly published library not yet synced with maven central
-        maven {
-            url("https://s01.oss.sonatype.org/content/repositories/releases/")
-            content {
-                includeGroup("dev.rikka.tools.refine")
-                includeGroup("dev.rikka.tools.autoresconfig")
-                includeGroup("dev.rikka.tools.materialthemebuilder")
-            }
-        }
-        mavenLocal()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
-        classpath 'com.vanniktech:gradle-maven-publish-plugin:0.20.0'
-        classpath 'dev.rikka.tools.refine:gradle-plugin:3.1.1'
-        classpath 'dev.rikka.tools.autoresconfig:gradle-plugin:1.2.1'
-        classpath 'dev.rikka.tools.materialthemebuilder:gradle-plugin:1.4.0'
-    }
-}
-
 allprojects {
-    repositories {
-        mavenCentral()
-        google()
-
-        // In case newly published library not yet synced with maven central
-        maven {
-            url("https://s01.oss.sonatype.org/content/repositories/releases/")
-            content {
-                includeGroupByRegex("dev.rikka.*")
-                includeGroup("org.lsposed.hiddenapibypass")
-            }
-        }
-        mavenLocal()
-    }
     tasks.withType(Javadoc) {
         failOnError false
         options.addStringOption('Xdoclint:none', '-quiet')
@@ -55,19 +34,18 @@ allprojects {
 }
 
 subprojects {
-    afterEvaluate {
-        if (plugins.hasPlugin("com.android.library") ||
-                plugins.hasPlugin("com.android.application")) {
-            android {
-                compileSdkVersion(33)
-                defaultConfig {
-                    minSdkVersion(23)
-                    targetSdkVersion(32)
-                }
-                compileOptions {
-                    sourceCompatibility = JavaVersion.VERSION_1_8
-                    targetCompatibility = JavaVersion.VERSION_1_8
-                }
+    plugins.withId("com.android.base") {
+        plugins.apply('dev.rikka.tools.refine')
+
+        android {
+            compileSdk = 33
+            defaultConfig {
+                minSdk = 23
+                targetSdk = 32
+            }
+            compileOptions {
+                sourceCompatibility = JavaVersion.VERSION_1_8
+                targetCompatibility = JavaVersion.VERSION_1_8
             }
         }
     }
