--- a/server/build.gradle
+++ b/server/build.gradle
@@ -21,6 +21,8 @@ dependencies {
     implementation project(':starter')
     implementation project(':rish')
     implementation project(':server-shared')
-    implementation 'dev.rikka.hidden:compat:3.4.3'
-    compileOnly 'dev.rikka.hidden:stub:3.4.3'
+    implementation libs.hidden.compat
+    compileOnly libs.hidden.stub
+    annotationProcessor libs.refine.annotation.processor
+    implementation libs.refine.annotation
 }
