--- a/shell/build.gradle
+++ b/shell/build.gradle
@@ -55,5 +55,5 @@ android.applicationVariants.all { variant ->
 }
 
 dependencies {
-    compileOnly 'dev.rikka.hidden:stub:3.4.3'
+    compileOnly libs.hidden.stub
 }
