--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,7 @@
 android.useAndroidX=true
 android.enableResourceOptimizations=true
 android.enableParallelJsonGen=true
+android.enableR8.fullMode=false
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
