Ensure optimizedDirectory for rish dex is readable and writable

--- a/shell/build.gradle
+++ b/shell/build.gradle
@@ -23,6 +23,9 @@ android {
     lint {
         checkReleaseBuilds false
     }
+    buildFeatures {
+        buildConfig = true
+    }
 }
 
 android.applicationVariants.all { variant ->
