--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -2,7 +2,7 @@ name: Bug report
 description: Report a bug of Shizuku
 title: "[Bug] "
 labels: ["bug"]
-assignees: ""
+assignees: "
 
 body:
   - type: markdown
